added some positioning and more design.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="profile">
       <img class="my-picture" src="images/boy.png" alt="">
       <h2>Hey there.</h2>
-      <p>I just recently started learning Web Development and this is my first website!</p>
+      <p class="intro">I just recently started learning Web Development and this is my first website!</p>
     </div>
     <hr>
     <div class="skills">
       <div class="skill-row">
-        <img class="laptop" src="images/laptop.png" alt="">
+        <img class="laptop" src="images/home.png" alt="">
         <h3>Programming</h3>
         <p class="computer-part">I've always had a love for technology and the things you can do with a computer.</p>
       </div>
@@ -41,8 +41,8 @@
     <hr>
     <div class="contact-me">
       <h3>Future Goals.</h3>
-      <p>In the future I hope to become a fullstack web developer. I'm prepared and excited for the road ahead of me.</p>
-      <a class="btn" href="mailto:powerlock174@gmail.com">CONTACT ME</a>
+      <p class="Goals">In the future I hope to become a fullstack web developer. I'm prepared and excited for the road ahead of me.</p>
+      <a class="butn" href="mailto:powerlock174@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
@@ -51,7 +51,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/haydenbazor/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://haydenknows.com/">Website</a>
-    <p>© 2018 Hayden Bazor.</p>
+    <p class="copyright">© 2018 Hayden Bazor.</p>
   </div>
 </body>
 
